change background color.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import '~sweetalert2/dist/sweetalert2.css';
 
 body {
   margin: 0;
   font-family: Roboto, sans-serif;
+  background-color: #ccc;
 }
 
 md-card {
